--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -186,6 +186,8 @@ Changed
   * `reverse-selection` -> `selection-reverse`
   * `follow-selected` -> `selection-follow`
   * `follow-hint` -> `hint-follow`
+  * `enter-mode` -> `mode-enter`
+  * `leave-mode` -> `mode-leave`
 - Various performance improvements, including for the startup time.
 
 Fixed
