--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -637,6 +637,8 @@ Default:
 * +pass:[gB]+: +pass:[set-cmd-text -s :bookmark-load -t]+
 * +pass:[gC]+: +pass:[tab-clone]+
 * +pass:[gD]+: +pass:[tab-give]+
+* +pass:[gJ]+: +pass:[tab-move +]+
+* +pass:[gK]+: +pass:[tab-move -]+
 * +pass:[gO]+: +pass:[set-cmd-text :open -t -r {url:pretty}]+
 * +pass:[gU]+: +pass:[navigate up -t]+
 * +pass:[g^]+: +pass:[tab-focus 1]+
@@ -646,10 +648,8 @@ Default:
 * +pass:[gf]+: +pass:[view-source]+
 * +pass:[gg]+: +pass:[scroll-to-perc 0]+
 * +pass:[gi]+: +pass:[hint inputs --first]+
-* +pass:[gl]+: +pass:[tab-move -]+
 * +pass:[gm]+: +pass:[tab-move]+
 * +pass:[go]+: +pass:[set-cmd-text :open {url:pretty}]+
-* +pass:[gr]+: +pass:[tab-move +]+
 * +pass:[gt]+: +pass:[set-cmd-text -s :tab-select]+
 * +pass:[gu]+: +pass:[navigate up]+
 * +pass:[h]+: +pass:[scroll left]+
@@ -3343,7 +3343,7 @@ This setting supports URL patterns.
 
 Type: <<types,Bool>>
 
-Default: +pass:[true]+
+Default: +pass:[false]+
 
 [[input.insert_mode.plugins]]
 === input.insert_mode.plugins
@@ -3384,10 +3384,11 @@ Default: +pass:[false]+
 === input.partial_timeout
 Timeout (in milliseconds) for partially typed key bindings.
 If the current input forms only partial matches, the keystring will be cleared after this time.
+If set to 0, partially typed bindings are never cleared.
 
 Type: <<types,Int>>
 
-Default: +pass:[5000]+
+Default: +pass:[0]+
 
 [[input.spatial_navigation]]
 === input.spatial_navigation
@@ -3840,7 +3841,7 @@ Open new tabs (middleclick/ctrl+click) in the background.
 
 Type: <<types,Bool>>
 
-Default: +pass:[false]+
+Default: +pass:[true]+
 
 [[tabs.close_mouse_button]]
 === tabs.close_mouse_button
@@ -4185,7 +4186,7 @@ Width (in pixels or as percentage of the window) of the tab bar if it's vertical
 
 Type: <<types,PercOrInt>>
 
-Default: +pass:[20%]+
+Default: +pass:[15%]+
 
 [[tabs.wrap]]
 === tabs.wrap
