--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -118,6 +118,7 @@ Added
   show when `:open` is used without any input.
 - New `QUTE_VERSION` variable for userscripts, which can be used to read
   qutebrowser's version.
+- New "Copy URL" entry in the context menu for downloads.
 - New userscripts:
   * `kodi` to play videos in Kodi
   * `qr` to generate a QR code of the current URL
