--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -206,7 +206,8 @@ Changed
     changed from `gl` and `gr` to `gK` and `gJ`, to be consistent with the tab
     switching bindings.
 - "Super" is now understood as a modifier (i.e. as alias to "Meta")
-- Various performance improvements, including for the startup time.
+- Initial support for Python 3.10 (currently in Alpha stage)
+- Various performance improvements, including for the startup time
 
 Fixed
 ~~~~~
