--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -147,6 +147,7 @@ Changed
   * The default bindings for moving tabs (`tab-move -` and `tab-move +`) were
     changed from `gl` and `gr` to `gK` and `gJ`, to be consistent with the tab
     switching bindings.
+  * The text color for warning messages is now black instead of white, for increased contrast and thus readability.
 - On the first start, the history completion database is regenerated to remove
   a few problematic entries (such as long `qute://pdfjs` URLs). This might take
   a couple of minutes, but is a one-time operation. This should result in a
