--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -22,6 +22,16 @@ v2.0.0 (unreleased)
 Major changes
 ~~~~~~~~~~~~~
 
+- If the Python `adblock` library is available, it is now used to
+  integrate Brave's Rust adblocker library for improved adblocking based on
+  ABP-like filter lists (such as EasyList).
+  If it is unavailable, qutebrowser falls back to host-blocking, i.e. the same
+  blocking technique it used before this release. As part of this, various
+  settings got renamed, see "Changed" below.
+  **Note: If the `adblock` dependency is available, qutebrowser will ignore
+  custom host blocking** via the `blocked-hosts` config file or `file:///` URLs
+  supplied as host blocking lists. You will need to either migrate those to
+  ABP-like lists, or set `content.blocking.method` to `both`.
 - Various dependency upgrades - a quick checklist for packagers (see "Changed"
   below for details):
   * Ensure you're providing at least Python 3.6.1.
@@ -39,12 +49,6 @@ Major changes
   * For Python 3.6, 3.7 or 3.8, add a dependency on the `importlib_resources`
     backport.
   * For Python 3.6 only, add a dependency on the `dataclasses` backport.
-- If the Python `adblock` library is available, it is now used to
-  integrate Brave's Rust adblocker library for improved adblocking based on
-  ABP-like filter lists (such as EasyList).
-  If it is unavailable, qutebrowser falls back to host-blocking, i.e. the same
-  blocking technique it used before this release. As part of this, various
-  settings got renamed, see "Changed" below.
 - Dropped support for old OS versions in binary releases:
   * Support for Windows 7 is dropped in the Windows binaries, the minimum
     required Windows version is now Windows 8.1.
@@ -175,10 +179,7 @@ Changed
   at the time of writing, it's recommended to
   https://github.com/qutebrowser/qutebrowser/blob/master/doc/install.asciidoc#installing-qutebrowser-with-virtualenv[install qutebrowser in a virtualenv]
   with a newer version of Qt/PyQt.
-- New optional dependency on the Python `adblock` library, which is now used to
-  integrate Brave's Rust adblocker library, if the `adblock` module is available.
-  If it is unavailable, qutebrowser falls back to host-blocking, i.e. the same
-  blocking technique it used before this release.
+- New optional dependency on the Python `adblock` library (see above for details).
 - The (formerly optional) `cssutils` dependency is now removed. It was only
   needed for improved behavior in corner cases when using `:download --mhtml`
   with the (non-default) QtWebKit backend, and as such it's unlikely anyone is
@@ -196,8 +197,9 @@ Changed
   Python versions up to and including 3.8. Note that the stdlib
   `importlib.resources` module for Python 3.7 and 3.8 is missing the needed APIs,
   thus requiring the backports for those versions as well.
-- The former dependency on the `attrs`/`attr` package is now dropped.
-- On Python 3.6, a new dependency on the `dataclasses` backport is now required.
+- The former dependency on the `attrs`/`attr` package is now dropped in favour
+  of `dataclasses` in the Python standard library. On Python 3.6, a new
+  dependency on the `dataclasses` backport is now required.
 - The former dependency on the `pypeg2` package is now dropped. This might cause
   some changes for certain corner-cases for suggested filenames when downloading
   files with the QtWebKit backend.
