Handle install of adblock library during runtime
The _possibly_show_missing_dependency_warning() is only shown if the
"adblock" import is unavailable (i.e. None), thus we assumed that it
must be either not installed or outdated.

However, there's a third possible case: The library wasn't available at
import time, but it *is* available when the setting changed at runtime.
If that's the case, show a warning instead of an AssertionError.

(cherry picked from commit d2f0cad2c7610b62c24648db5efdfa2c7410637f)

--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -30,6 +30,10 @@ Fixed
   file is not part of the release anymore, but if an old version is still around,
   causes qutebrowser to crash. It's now explicitly blocked inside qutebrowser so
   it gets ignored even if it still exists.
+- When the adblocking method was switched using `:set`, and the `adblock`
+  dependency was unavailable when qutebrowser started (but was installed while
+  qutebrowser was open), this resulted in a crash. Now a warning prompting for a
+  restart of qutebrowser is shown instead.
 
 Changed
 ~~~~~~~
