--- a/doc/faq.asciidoc
+++ b/doc/faq.asciidoc
@@ -97,9 +97,10 @@ security bugs, please contact me directly at mail@qutebrowser.org, GPG ID
 https://www.the-compiler.org/pubkey.asc[0x916eb0c8fd55a072].
 
 Is there an ad blocker?::
-    There is a simple host-based ad blocker that takes `/etc/hosts`-like lists.
-+
-More advanced ad blockers can have a big impact on browsing speed and https://blog.mozilla.org/nnethercote/2014/05/14/adblock-pluss-effect-on-firefoxs-memory-usage/[RAM usage], so implementing support for AdBlock Plus-like lists is not a priority.
+    With version 2.0.0, if the Python adblock library is available, it will be used
+    to integrate Brave's Rust adblocker library for improved adblocking 
+    based on ABP-like filter lists (such as EasyList). Otherwise, the default ad blocker
+    is a simple host-based ad blocker that takes `/etc/hosts`-like lists.
 
 How can I get No-Script-like behavior?::
     To disable JavaScript by default:
