--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -15,6 +15,16 @@ breaking changes (such as renamed commands) can happen in minor releases.
 // `Fixed` for any bug fixes.
 // `Security` to invite users to upgrade in case of vulnerabilities.
 
+[[v2.0.2]]
+v2.0.2 (unreleased)
+-------------------
+
+Fixed
+~~~~~
+
+- When right-clicking an empty part of the downloads bar, qutebrowser v2.0.x
+  would crash. This is now fixed.
+
 [[v2.0.1]]
 v2.0.1 (2021-01-28)
 -------------------
