--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -28,6 +28,17 @@ Fixed
   requesting unavailable resource files (such as PDF.js not being bundled, or a
   missing changelog file) caused in a crash due to an inconsistent behavior in
   those versions of Python. This is now handled properly by qutebrowser.
+- In v2.0.0, support for importing the `sip` dependency as `sip` rather than
+  `PyQt5.sip` was dropped, since upstream claims it should be used as `PyQt5.sip`
+  ever since PyQt 5.11. However, some distributions still package sip as a global
+  `sip` package. Thus, support for a global `sip` package is now reintroduced.
+- When the `importlib_resources` package is required but was missing, users
+  would get a Python stacktrace rather than a proper error messages. This is now
+  fixed.
+- Site-specific quirk JavaScript files were loaded lazily rather than preloaded
+  at the start of qutebrowser, causing a crash when e.g. switching between
+  versions while qutebrowser is open. Now they are preloaded at the start of
+  qutebrowser again.
 
 [[v2.0.1]]
 v2.0.1 (2021-01-28)
