--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -39,6 +39,8 @@ Fixed
   at the start of qutebrowser, causing a crash when e.g. switching between
   versions while qutebrowser is open. Now they are preloaded at the start of
   qutebrowser again.
+- The link to the keybinding cheatsheet on the internal `:help` page wasn't
+  displayed correctly. This is now fixed.
 
 [[v2.0.1]]
 v2.0.1 (2021-01-28)
